M-check-your-iq update on 13/1/2014